# EE4953FinalProject

./: .gitignore  Cargo.toml  README.md  client.py
migrations/2026-04-30-175739-0000_create_users/: up.sql
src/: db.rs  main.rs  models.rs  schema.rs
src/routes/: users.rs
