[package]
name = "keyserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2", features = ["sqlite", "returning_clauses"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bcrypt = "0.19.0"
reqwest = { version = "0.13.3", features = ["json"] }
tower = "0.5"