[package]
name = "keyserver"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8"
tokio = { version = "1", features = ["full"] }
diesel = { version = "2.2", features = ["sqlite", "returning_clauses_for_sqlite_3_35"] }
dotenvy = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "*"
bcrypt = "0.19.0"
reqwest = { version = "0.13.3", features = ["json"] }
tower = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"